plugins {
    id 'org.springframework.boot' version '2.5.6'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'ru.neoflex'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter:2.6.2'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.6.2'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.2'
    implementation 'io.swagger.core.v3:swagger-core:2.1.12'
    implementation 'io.springfox:springfox-boot-starter:3.0.0'
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'

    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.2'

    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'

    runtimeOnly 'org.postgresql:postgresql:42.3.1'
}

test {
    useJUnitPlatform()
}
